修复暗色模式中控台关闭按钮颜色样式

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -108,7 +108,8 @@
     i.right
       width: 100% !important;
       transform: rotate(45deg) !important;
-
+[data-theme="dark"] #center-console:checked + label:is(.widget, #center-console:checked + label .widget:hover) i
+  background: var(--anzhiyu-black) !important;
 div#travellings_button
   display: flex
   &:hover::after
