【控制台】修复关于页面打赏和控制台样式冲突的问题

--- a/source/css/_custom/console/console.css
+++ b/source/css/_custom/console/console.css
@@ -26,6 +26,10 @@
   pointer-events: all;
 }
 
+#console.reward-show .console-card-group {
+  pointer-events: none;
+}
+
 #console .console-card-group {
   display: flex;
   justify-content: space-between;
