修复顶栏动画

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -210,6 +210,7 @@ div#travellings_button
 #nav .menus_items .menus_item .menus_item_child li a
   padding 2px 16px
   border-radius 50px
+  transition: .3s !important
 #nav .menus_items .menus_item .menus_item_child li:hover a
   color white !important
 
