--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -277,6 +277,11 @@
         display: flex
         align-items: center
         padding: 2px 10px 0
+        & > i
+          line-height: 2;
+          margin-right: 6px;
+          width: 16px;
+          text-align: center;
 
         div
           &:first-child
