站点信息样式优化 图标更新

--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -277,11 +277,14 @@
         display: flex
         align-items: center
         padding: 2px 10px 0
-        & > i
-          line-height: 2;
-          margin-right: 6px;
-          width: 16px;
-          text-align: center;
+        justify-content: space-between;
+        .webinfo-item-title 
+          display: flex;
+          i
+            line-height: 2;
+            margin-right: 6px;
+            width: 16px;
+            text-align: center;
 
         div
           &:first-child
