--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -175,6 +175,10 @@
         padding: 0 32px;
         width 100%
         align-items: center;
+        .sticky-warp
+          position: absolute;
+          top: -100px;
+          right: 32px;
         .article-meta
           white-space: nowrap;
           overflow: hidden;
@@ -196,6 +200,7 @@
 
         .sticky
           color: $sticky-color
+          font-size: 12px;
 
         i
           margin: 0 4px 0 0
