--- a/source/css/_page/flink.styl
+++ b/source/css/_page/flink.styl
@@ -332,7 +332,7 @@ body[data-type="link"]
   top: 0;
   left: 0;
   padding: 4px 8px;
-  background-color: var(--anzhiyu-theme);
+  background-color: var(--anzhiyu-blue-main);
   box-shadow: var(--anzhiyu-shadow-blue);
   color: var(--anzhiyu-white);
   z-index: 1;
