修复快捷键变量产生的问题

--- a/layout/includes/head/config.pug
+++ b/layout/includes/head/config.pug
@@ -138,5 +138,6 @@ script.
     },
     isPhotoFigcaption: !{theme.photofigcaption},
     islazyload: !{theme.lazyload.enable},
-    isAnchor: !{theme.anchor}
+    isAnchor: !{theme.anchor},
+    shortcutKey: !{theme.shortcutKey.enable}
   }
