修复侧边栏card_categories样式

--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -135,7 +135,8 @@ span.card-archive-list-count {
   font-size: 13px;
   opacity: 0.6;
 }
-li.card-archive-list-item {
+li.card-archive-list-item,
+li.card-category-list-item {
   width: 100%;
   flex: 0 0 48%;
 }
