--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -332,6 +332,7 @@ if hexo-config('lazyload.enable') && hexo-config('lazyload.blur') && !hexo-confi
 
     &[data-lazy-src].error
       filter: none
+      opacity 1 !important
 
 // lazyload progressive
 if hexo-config('lazyload.enable') && hexo-config('lazyload.progressive') && !hexo-config('lazyload.placeholder')
