更新描述默认颜色

--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -45,7 +45,7 @@
 
       &__description
         margin-top: -.42em
-        color: var(--anzhiyu-fontcolor);
+        color: var(--btn-color);
     
     .banner-button-group .banner-button 
       padding: 20px 12px;
