侧边栏分类样式优化

--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -131,10 +131,12 @@ span.card-archive-list-count {
   line-height: 0.9;
   font-weight: 700;
 }
-.card-archive-list-date {
+.card-archive-list-date,
+span.card-category-list-name {
   font-size: 13px;
   opacity: 0.6;
 }
+
 li.card-archive-list-item,
 li.card-category-list-item {
   width: 100%;
@@ -158,8 +160,7 @@ li.card-category-list-item {
   }
   #aside-content .card-archives ul.card-archive-list > .card-archive-list-item a:hover,
   #aside-content .card-categories ul.card-category-list > .card-category-list-item a:hover {
-    padding: 3px 3px;
-    transform: scale(1.03);
+    padding: 3px 8px;
   }
   #aside-content .card-archives ul.card-archive-list > .card-archive-list-item a:active,
   #aside-content .card-categories ul.card-category-list > .card-category-list-item a:active {
@@ -318,7 +319,7 @@ li.card-category-list-item {
 @media screen and (min-width: 900px) {
   #aside-content .card-archives ul.card-archive-list > .card-archive-list-item a,
   #aside-content .card-categories ul.card-category-list > .card-category-list-item a {
-    padding: 3px 3px;
+    padding: 3px 5px;
   }
 }
 
