--- a/layout/includes/loading/fullpage-loading.pug
+++ b/layout/includes/loading/fullpage-loading.pug
@@ -18,15 +18,22 @@ script.
       }
     }
   }, 100);
+  var loadingBoxTimer = null
   const preloader = {
     endLoading: () => {
       document.body.style.overflow = 'auto';
-      document.getElementById('loading-box').classList.add("loaded")
+      document.getElementById('loading-box').classList.add("loaded");
       Pace.restart()
+      loadingBoxTimer && clearTimeout(loadingBoxTimer)
     },
     initLoading: () => {
       document.body.style.overflow = '';
       document.getElementById('loading-box').classList.remove("loaded")
+      loadingBoxTimer = setTimeout(()=>{
+        if (!document.getElementById('loading-box').classList.contains("loaded")) {
+          preloader.endLoading()
+        }
+      }, 15000)
     }
   }
   window.addEventListener('load',()=> { preloader.endLoading() })
