--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -313,6 +313,7 @@ blockquote {
     &__post__info
       display: flex;
       align-items: center;
+      justify-content: center;
       margin-top: 12px;
     &__original,&__reprint
       background: var(--anzhiyu-main);
@@ -342,7 +343,7 @@ blockquote {
       overflow: hidden;
       text-overflow: ellipsis;
       font-weight: 500
-      width: 80%;
+      max-width: 70%;
       span
         cursor pointer
       
